Fix spacings in several components

--- a/src/components/BrandedList/brandedList.scss
+++ b/src/components/BrandedList/brandedList.scss
@@ -2,18 +2,18 @@
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  padding: 2rem 0 4rem;
+  padding: 4rem 0;
 
   @media only screen and (min-width: 768px) {
-    padding: 4rem 0 6rem;
+    padding: 6rem 0;
   }
 
   @media only screen and (min-width: 1024px) {
-    padding: 6rem 0 8rem;
+    padding: 8rem 0;
   }
 
   @media only screen and (min-width: 3000px) {
-    padding: 8rem 0 10rem;
+    padding: 10rem 0;
   }
 
   .row {
