--- a/src/components/Gallery/gallery.scss
+++ b/src/components/Gallery/gallery.scss
@@ -1,5 +1,4 @@
 .gallery {
-  display: inline-flex;
   padding: 0;
 
   &__content {
