--- a/src/components/ProductList/productList.scss
+++ b/src/components/ProductList/productList.scss
@@ -14,7 +14,7 @@
         }
 
         @media only screen and (min-width: 1024px) {
-          padding: 6rem 0 0;
+          padding: 6rem 0;
         }
 
         @media only screen and (min-width: 3000px) {
