--- a/src/components/TheHeader/TheNavbar/theNavbar.scss
+++ b/src/components/TheHeader/TheNavbar/theNavbar.scss
@@ -39,9 +39,13 @@ nav {
     }
 
     @media only screen and (min-width: 1200px) {
-      margin: 0 1.5rem;
+      margin: 0 1rem;
       line-height: 1.4;
       font-size: 1.125rem;
+    }
+
+    @media only screen and (min-width: 1400px) {
+      margin: 0 1.5rem;
     }
   }
 }
